--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,15 +1,45 @@
 {
   "types": [
-    { "type": "feat", "section": "✨ Features" },
-    { "type": "fix", "section": "🐛 Bug Fixes" },
-    { "type": "chore", "hidden": true },
-    { "type": "docs", "section": "📚 Documentation" },
-    { "type": "style", "hidden": true },
-    { "type": "refactor", "section": "♻️ Code Refactoring" },
-    { "type": "perf", "section": "⚡ Performance Improvements" },
-    { "type": "test", "section": "✅ Tests" },
-    { "type": "build", "section": "🏗️ Build System" },
-    { "type": "ci", "section": "👷 CI/CD" }
+    {
+      "type": "feat",
+      "section": "✨ Features"
+    },
+    {
+      "type": "fix",
+      "section": "🐛 Bug Fixes"
+    },
+    {
+      "type": "chore",
+      "hidden": true
+    },
+    {
+      "type": "docs",
+      "section": "📚 Documentation"
+    },
+    {
+      "type": "style",
+      "hidden": true
+    },
+    {
+      "type": "refactor",
+      "section": "♻️ Code Refactoring"
+    },
+    {
+      "type": "perf",
+      "section": "⚡ Performance Improvements"
+    },
+    {
+      "type": "test",
+      "section": "✅ Tests"
+    },
+    {
+      "type": "build",
+      "section": "🏗️ Build System"
+    },
+    {
+      "type": "ci",
+      "section": "👷 CI/CD"
+    }
   ],
   "commitUrlFormat": "https://github.com/ace0109/ace-nuxt-starter/commit/{{hash}}",
   "compareUrlFormat": "https://github.com/ace0109/ace-nuxt-starter/compare/{{previousTag}}...{{currentTag}}",
