--- a/.env copy
+++ b/.env copy
@@ -1,3 +1,3 @@
-NUXT_PUBLIC_API_HOST = http://localhost:8000
+NUXT_PUBLIC_API_HOST = https://nest.wangcaiyuan.com
 NUXT_PUBLIC_API_PREFIX = api
 PORT = 8002
