feat: Implement chat functionality with streaming response and knowledge base management
- Added chat interface in `app/pages/chat.vue` to handle user messages and display assistant responses using SSE.
- Created API endpoint in `server/api/chat.post.ts` for chat interactions, forwarding requests and handling streaming responses.
- Introduced knowledge base management in `app/pages/console/knowledge-base.vue`, allowing document upload, deletion, and text ingestion.
- Updated API utilities in `server/utils/api.ts` to include API key in headers for requests.
- Enhanced document handling with pagination and metadata display in the knowledge base.
- Defined new types in `types/api.ts` for AI message chunks to support chat functionality.

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@
 # 具体请参考：https://nuxt.com/docs/4.x/guide/going-further/runtime-config#example
 NUXT_PUBLIC_API_BASE = https://nest.wangcaiyuan.com
 NUXT_PUBLIC_API_PREFIX = api
+NUXT_API_KEY =
 PORT = 3333
