--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "eslint.format.enable": true,
   "eslint.useFlatConfig": true,
   "editor.formatOnSave": true,
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "files.associations": {
     "*.css": "tailwindcss"
   },
@@ -21,5 +22,5 @@
   "i18n-ally.localesPaths": [
     "i18n",
     "i18n/locales"
-  ]
+  ],
 }
