feat: refactor knowledge base management and integrate AI API
- Removed the old knowledge base component and replaced it with a new implementation in `knowledge-base/index.vue` and `knowledge-base/manage.vue`.
- Updated API calls to use the new AI API endpoints for document management and ingestion.
- Enhanced the API utility functions to support upstream configurations for AI requests.
- Added new server API routes for handling AI-related requests, including chat and document management.
- Improved user interface elements for document management, including upload and delete functionalities.
- Added support for streaming responses in the chat API.

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@
 # 具体请参考：https://nuxt.com/docs/4.x/guide/going-further/runtime-config#example
 NUXT_PUBLIC_API_BASE = https://nest.wangcaiyuan.com
 NUXT_PUBLIC_API_PREFIX = api
-NUXT_API_KEY =
+NUXT_AI_API_BASE = http://127.0.0.1:8000
+NUXT_AI_API_PREFIX = api
+NUXT_API_KEY = 0b061146afca41b980180300a7995574
 PORT = 3333
