--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.13",
+    "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/ix": "^1.2.8",
     "@iconify-json/lucide": "^1.2.68",
     "@iconify-json/mdi": "^1.2.3",
